@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.68 2002/12/16 10:53:28 frueauf Exp $
+# $NetBSD: Makefile,v 1.69 2002/12/29 15:11:53 veego Exp $
 
 DISTNAME=		ethereal-0.9.8
+PKGREVISION=		1
 CATEGORIES=		net
 MASTER_SITES=		ftp://ftp.ethereal.com/pub/ethereal/ \
 			ftp://ftp.sunet.se/pub/network/monitoring/ethereal/
@@ -19,13 +20,13 @@ LIBTOOL_OVERRIDE=	${WRKSRC}/libtool
 GNU_CONFIGURE=		YES
 CONFIGURE_ARGS+=	--with-gtk-prefix=${BUILDLINK_PREFIX.gtk}
 CONFIGURE_ARGS+=	--with-ssl=${SSLBASE}
-CONFIGURE_ARGS+=	--with-ucdsnmp=${BUILDLINK_PREFIX.ucd-snmp}
+CONFIGURE_ARGS+=	--with-net-snmp=${BUILDLINK_PREFIX.net-snmp}
 CONFIGURE_ARGS+=	--with-pcap=${BUILDLINK_PREFIX.libpcap}
 CONFIGURE_ARGS+=	--with-zlib=${BUILDLINK_PREFIX.zlib}
 
 .include "../../devel/zlib/buildlink2.mk"
 .include "../../net/libpcap/buildlink2.mk"
-.include "../../net/ucd-snmp/buildlink2.mk"
+.include "../../net/net-snmp/buildlink2.mk"
 .include "../../security/openssl/buildlink2.mk"
 .include "../../x11/gtk/buildlink2.mk"
 
