@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.937 2002/12/29 04:38:40 hubertf Exp $
+$NetBSD: CHANGES,v 1.938 2002/12/29 15:11:51 veego Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -4304,3 +4304,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated xldlas to 0.85nb2 [jschauma 2002-12-28]
 	Updated gimp-base to 1.2.3nb4 [jmmv 2002-12-28]
 	Deleted agqt [hubertf 2002-12-29]
+	Updated ethereal to 0.9.8nb1 [veego 2002-12-29]
